--- a/project_code/Learn_Asio/AsioExample1/CMakeLists.txt
+++ b/project_code/Learn_Asio/AsioExample1/CMakeLists.txt
@@ -2,6 +2,9 @@ cmake_minimum_required (VERSION 3.10)
 
 get_filename_component(TARGET ${CMAKE_CURRENT_SOURCE_DIR} NAME)
 
+get_filename_component(SECOND_FOLDER_ABSOLUTE ${CMAKE_CURRENT_SOURCE_DIR} DIRECTORY)
+get_filename_component(SECOND_FOLDER ${SECOND_FOLDER_ABSOLUTE} NAME)
+
 project(${TARGET})
 
 #静态库
@@ -35,4 +38,4 @@ file(GLOB_RECURSE RES_SOURCE "${SOURCEPATH}/*.qrc"
 include(${ROOTPATH}/cmake/app.cmake)
 include(${ROOTPATH}/cmake/myboost.cmake)
 
-set_property(TARGET ${TARGET} PROPERTY FOLDER "${APP_PARENT_FOLDER_NAME}/${TARGET}")
+set_property(TARGET ${TARGET} PROPERTY FOLDER "${SECOND_FOLDER}/${TARGET}")
